--- a/html/home.html
+++ b/html/home.html
@@ -37,9 +37,10 @@
       <li><a href="curs5-6.html" class="link">Cursuri 5-6</a></li>
       <li><a href="curs7.html" class="link">Curs 7</a></li>
       <li>
-        <a href="curs8-9.html" class="link" style="color: yellowgreen"
-          >Curs 8-9</a
-        >
+        <a href="curs8-9.html" class="link">Curs 8-9</a>
+      </li>
+      <li>
+        <a href="curs10.html" class="link" style="color: yellowgreen">Curs 10</a>
       </li>
     </ul>
     <h3>Linkurile către secțiuni:</h3>
@@ -52,10 +53,14 @@
     <ul>
       <li><a href="tabele.html" class="link">Tabele</a></li>
       <li>
-        <a href="formulare.html" class="link">Formulare</a
-        >
+        <a href="formulare.html" class="link">Formulare</a>
       </li>
-      <a href="formulare2.html" class="link" style="color: yellowgreen;">Formulare 2</a>
+      <li>
+        <a href="formulare2.html" class="link">Formulare 2</a>
+      </li>
+      <li>
+        <a href="cv.html" class="link" style="color: yellowgreen">CV</a>
+      </li>
     </ul>
     <h3 id="s1">Secțiunea 1</h3>
     <p>
@@ -73,8 +78,8 @@
     </p>
     <h3 id="s3">Secțiunea 3</h3>
     <p>
-      Cu ajutorul tagurilor de liste, media, linkuri si formulare putem face site-ul mai
-      functional.
+      Cu ajutorul tagurilor de liste, media, linkuri si formulare putem face
+      site-ul mai functional.
     </p>
   </body>
 </html>
