--- a/html/home.html
+++ b/html/home.html
@@ -40,7 +40,10 @@
         <a href="curs8-9.html" class="link">Curs 8-9</a>
       </li>
       <li>
-        <a href="curs10.html" class="link" style="color: yellowgreen">Curs 10</a>
+        <a href="curs10.html" class="link">Curs 10</a>
+      </li>
+      <li>
+        <a href="curs11.html" class="link" style="color: yellowgreen">Curs 11</a>
       </li>
     </ul>
     <h3>Linkurile către secțiuni:</h3>
