--- a/html/home.html
+++ b/html/home.html
@@ -43,7 +43,12 @@
         <a href="curs10.html" class="link">Curs 10</a>
       </li>
       <li>
-        <a href="curs11.html" class="link" style="color: yellowgreen">Curs 11</a>
+        <a href="curs11.html" class="link">Curs 11</a>
+      </li>
+      <li>
+        <a href="curs12.html" class="link" style="color: yellowgreen"
+          >Curs 12</a
+        >
       </li>
     </ul>
     <h3>Linkurile către secțiuni:</h3>
@@ -62,7 +67,7 @@
         <a href="formulare2.html" class="link">Formulare 2</a>
       </li>
       <li>
-        <a href="cv.html" class="link" style="color: yellowgreen">CV</a>
+        <a href="cv.html" class="link">CV</a>
       </li>
     </ul>
     <h3 id="s1">Secțiunea 1</h3>
