--- a/html/home.html
+++ b/html/home.html
@@ -46,9 +46,7 @@
         <a href="curs11.html" class="link">Curs 11</a>
       </li>
       <li>
-        <a href="curs12.html" class="link" style="color: yellowgreen"
-          >Curs 12</a
-        >
+        <a href="curs12.html" class="link">Curs 12</a>
       </li>
     </ul>
     <h3>Linkurile către secțiuni:</h3>
@@ -68,6 +66,18 @@
       </li>
       <li>
         <a href="cv.html" class="link">CV</a>
+      </li>
+      <li>
+        <a href="formulare2.html" class="link">Formulare 2</a>
+      </li>
+      <li>
+        <a href="blog.html" class="link">Blog</a>
+      </li>
+      <li>
+        <a href="exercitii-css-2.html" class="link">Exerciții CSS 2</a>
+      </li>
+      <li>
+        <a href="exercitii-css-3.html" class="link">Exerciții CSS 3</a>
       </li>
     </ul>
     <h3 id="s1">Secțiunea 1</h3>
