--- a/html/tabele.html
+++ b/html/tabele.html
@@ -29,40 +29,147 @@
         <td>Celula 6</td>
       </tr>
     </table>
-    <table border="1" align="center" cellpadding="25" cellspacing="5" width="70%">
-        <caption><b>Evaluarea Proiectelor - 2025</b></caption>
-      <tr>
-        <th rowspan="2">1</td>
-        <th colspan="2" rowspan="2">2</td>
-        <th>4</td>
-        <th>5</td>
-        <th>6</td>
+    <table border="1" align="center" width="70%">
+      <caption>
+        <b>Evaluarea Proiectelor - 2025</b>
+      </caption>
+      <tr style="background-color: #ffcccb">
+        <th rowspan="2">Nr. crt.</th>
+        <th rowspan="2">Nume Student</th>
+        <th colspan="3">Note</th>
+      </tr>
+      <tr style="text-align: center; background-color: #ffcccb">
+        <td>Proiect 1</td>
+        <td>Proiect 2</td>
+        <td>Proiect 3</td>
       </tr>
       <tr>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
+        <td style="text-align: center">1</td>
+        <td>Vasilescu Elena</td>
+        <td style="text-align: center; background-color: #d2f9d9">8</td>
+        <td style="text-align: center; background-color: #d2f9d9">9</td>
+        <td style="text-align: center; background-color: #d2f9d9">7</td>
       </tr>
       <tr>
+        <td style="text-align: center">2</td>
+        <td>Ionescu Radu</td>
+        <td style="text-align: center; background-color: #f9d3d3">6</td>
+        <td style="text-align: center; background-color: #f9d3d3">5</td>
+        <td style="text-align: center; background-color: #f9d3d3">6</td>
+      </tr>
+      <tr>
+        <td style="text-align: center">3</td>
+        <td>Popa Maria</td>
+        <td style="text-align: center; background-color: #e5f7ff">9</td>
+        <td style="text-align: center; background-color: #e5f7ff">10</td>
+        <td style="text-align: center; background-color: #e5f7ff">9</td>
+      </tr>
+    </table>
+    <table border="1" align="center" width="70%">
+      <caption>
+        <b>Evaluarea Proiectelor - 2025</b>
+      </caption>
+      <tr style="background-color: #b0c4df">
+        <th>Nr. crt.</th>
+        <th>Serviciu</th>
+        <th>Preț</th>
+      </tr>
+      <tr style="background-color: #eff8ff">
         <td>1</td>
-        <td colspan="2">2</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
+        <td>Consultanță IT</td>
+        <td style="text-align: center; background-color: #d3ffd3">500 RON</td>
+      </tr>
+      <tr style="background-color: #eff8ff">
+        <td>2</td>
+        <td>Design Web</td>
+        <td
+          style="
+            text-align: center;
+            text-align: center;
+            background-color: #ffcccb;
+          "
+        >
+          700 RON
+        </td>
+      </tr>
+      <tr style="background-color: #eff8ff">
+        <td>3</td>
+        <td>Creare Software Personalizat</td>
+        <td style="text-align: center; background-color: #fff5ee">1000 RON</td>
+      </tr>
+    </table>
+    <table border="10" align="center" width="70%">
+      <caption>
+        <b>Raport Financiar Anual - 2025</b>
+      </caption>
+      <tr style="background-color: #4caf50">
+        <th rowspan="2">Nr. crt.</th>
+        <th rowspan="2">Companie</th>
+        <th colspan="3">Venituri</th>
+        <th colspan="3">Cheltuieli</th>
+        <th rowspan="2">Profit Net</th>
+      </tr>
+      <tr style="background-color: #4caf50">
+        <th>Trimestrul 1</th>
+        <th>Trimestrul 2</th>
+        <th>Trimestrul 3</th>
+        <th>Trimestrul 1</th>
+        <th>Trimestrul 2</th>
+        <th>Trimestrul 3</th>
+      </tr>
+      <tr style="background-color: #e0f7fa">
+        <td>1</td>
+        <td>Compania A</td>
+        <td>15000</td>
+        <td>18000</td>
+        <td>20000</td>
+        <td>5000</td>
+        <td>6000</td>
+        <td>7000</td>
+        <td>10000</td>
       </tr>
       <tr>
-        <td>1</td>
-        <td colspan="2">2</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
+        <td>2</td>
+        <td>Compania B</td>
+        <td>12000</td>
+        <td>14000</td>
+        <td>16000</td>
+        <td>4000</td>
+        <td>4500</td>
+        <td>5000</td>
+        <td>8000</td>
+      </tr>
+      <tr style="background-color: #e0f7fa">
+        <td>3</td>
+        <td>Compania C</td>
+        <td>22000</td>
+        <td>24000</td>
+        <td>26000</td>
+        <td>7000</td>
+        <td>7500</td>
+        <td>8000</td>
+        <td>15000</td>
       </tr>
       <tr>
-        <td>1</td>
-        <td colspan="2">2</td>
         <td>4</td>
-        <td>5</td>
-        <td>6</td>
+        <td>Compania D</td>
+        <td>10000</td>
+        <td>12000</td>
+        <td>14000</td>
+        <td>3500</td>
+        <td>4000</td>
+        <td>4500</td>
+        <td>6000</td>
+      </tr>
+      <tr style="background-color: #a5d6a7;">
+        <td colspan="2">Total</td>
+        <td>59000</td>
+        <td>68000</td>
+        <td>76000</td>
+        <td>23500</td>
+        <td>27000</td>
+        <td>30500</td>
+        <td>46000</td>
       </tr>
     </table>
   </body>
